src/components/Main/Main.css
.bg {
  height: 100vh;
  display: flex;
  flex-direction: column;
  padding: 40px 60px;
}

.bg-image {
  order: 2;
  display: flex;
  justify-content: center;
}

.bg-text {
  order: 1;
  font-weight: 700;
  font-size: 38px;
  line-height: 45px;
  letter-spacing: -0.02em;
  color: #171717;
  display: flex;
  align-items: start;
}

